<resources>
    <string name="app_name">DriverHiring</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="donthave">Do not have an Account</string>
    <string name="sign_up">Sign up</string>
    <string name="driver">Driver</string>
    <string name="user">User</string>
    <string name="tv_validate_your_identity">Your Identification documents will help us to validate your identity</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_info">Password should contain uppercase, lowercase, number and atleast one special character</string>
    <string-array name="district">
        <item>Alappuzha</item>
        <item>Ernakulam</item>
        <item>Idukki</item>
        <item>Kannur</item>
        <item>Kasaragod</item>
        <item>Kollam</item>
        <item>Kottayam</item>
        <item>Kozhikode</item>
        <item>Malappuram</item>
        <item>Palakkad</item>
        <item>Pathanamthitta</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Wayanad</item>
    </string-array>
    <string-array name="state">
        <item>Kerala</item>
    </string-array>
    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t">DON\'T</string>
    <string name="sit_at_home">SIT AT HOME.</string>
    <string name="choose_your_vehicle">Choose Your Vehicle</string>
    <string name="title_activity_map_choose_destination">MapActivityChooseDestination</string>

</resources>