<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg1"
    android:focusableInTouchMode="true"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/driver_app_icon_adobe_express" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/icon"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="24dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create an Account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_name_singIn"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Full Name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/name_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <EditText
                        android:id="@+id/et_phn_singIn"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Phone Number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/phn_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_email_singIn"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/email_icon_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />

                <TextView
                    android:id="@+id/pass_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <EditText
                        android:id="@+id/et_pass_singIn"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/password_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Register As"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_user"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/user" />

                        <RadioButton
                            android:id="@+id/rb_driver"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:text="@string/driver" />
                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bt_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="40dp"
                android:text="Already have an account  ?"
                android:textColor="@color/colortextsignup"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/log_in"
                        android:textColor="@color/colortextsignupblue"
                        android:textSize="19dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colortextsignupblue" />

                </LinearLayout>


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/arrow" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>