<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg1"
    android:focusableInTouchMode="true"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile_pic"
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="25dp"
                    android:src="@drawable/driver_app_icon_adobe_express"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="5dp" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/img_profile_pic"
                    android:gravity="center"
                    android:text="username"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/edit_pro_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignBottom="@id/img_profile_pic"
                    android:layout_marginLeft="-35dp"
                    android:layout_marginBottom="-15dp"
                    android:layout_toRightOf="@id/img_profile_pic"
                    android:background="@drawable/img_edit_bg"
                    android:padding="3dp"
                    android:src="@drawable/edit_img" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Complete Registration"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_validate_your_identity"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_choose_id"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Choose valid id proof"
                        android:inputType="none"
                        android:focusable="false"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/choose_id_one"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center|left"
                        android:src="@drawable/choose_icon_one" />

                    <ImageView
                        android:id="@+id/choose_id_two"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/choose_icon_two" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/et_address_singIn"
                        style="@style/modifiedEditText"
                        android:layout_weight="0.9"
                        android:background="@null"
                        android:drawablePadding="0.5dip"
                        android:hint="Address"
                        android:maxLines="1"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:gravity="center|left"
                        android:src="@drawable/address_icon" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorlinebkack" />


                <LinearLayout
                    android:id="@+id/layout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_bg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bt_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="40dp"
                android:text="Already have an account  ?"
                android:textColor="@color/colortextsignup"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/log_in"
                        android:textColor="@color/colortextsignupblue"
                        android:textSize="19dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colortextsignupblue" />

                </LinearLayout>


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/arrow" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>